# TuxGuitarMCP

./: .gitignore  Cargo.toml  PLAN.md  README.md
.gemini/: settings.json
.github/workflows/: ci.yml  java.yml
bench/: TABBENCH.md  judge.py  prompt.md
bench/results/: README.md
crates/tabmcp-bridge/: Cargo.toml
crates/tabmcp-bridge/src/: client.rs  discovery.rs  error.rs  lib.rs  sim.rs
crates/tabmcp-bridge/tests/: golden_wire.rs  sim_roundtrip.rs
crates/tabmcp-bridge/tests/golden/: demo_wire.json
crates/tabmcp-model/: Cargo.toml
crates/tabmcp-model/src/: lib.rs  measures.rs
crates/tabmcp-server/: Cargo.toml
crates/tabmcp-server/src/: audio.rs  import.rs  main.rs  render.rs  serve.rs
crates/tabmcp-theory/: Cargo.toml
crates/tabmcp-theory/src/: analysis.rs  arrangement.rs  cells.rs  critique.rs  difficulty.rs  emotion.rs  fingering.rs  generation.rs  harmony.rs  lead.rs  lib.rs  ornament.rs  pitch.rs  realism.rs  search.rs  styles.rs  themes.rs  transforms.rs  transitions.rs
docs/: ANALYSIS.md  PROTOCOL.md  ROADMAP.md
docs/styles/: README.md  metalcore.example.md
scripts/: band_session.py  dev-reload.sh  install-tuxguitar-deps.sh
tuxguitar-mcp-bridge/: pom.xml
tuxguitar-mcp-bridge/src/main/java/tabmcp/tuxguitar/: TabMcpPlugin.java  TabMcpSpikeToolPlugin.java  TabMcpStatusToolPlugin.java
tuxguitar-mcp-bridge/src/main/java/tabmcp/tuxguitar/chat/: ChatDialog.java  ClaudeChatToolPlugin.java  ClaudeRunner.java
tuxguitar-mcp-bridge/src/main/java/tabmcp/tuxguitar/edit/: ChangesetApplier.java  ReversibleComposite.java  SpikeEdit.java
tuxguitar-mcp-bridge/src/main/java/tabmcp/tuxguitar/read/: MeasureReader.java  RevisionTracker.java  SongReader.java
tuxguitar-mcp-bridge/src/main/java/tabmcp/tuxguitar/rpc/: BridgeService.java  RpcException.java
tuxguitar-mcp-bridge/src/main/java/tabmcp/tuxguitar/server/: DiscoveryFile.java  McpSocketServer.java
tuxguitar-mcp-bridge/src/test/java/tabmcp/tuxguitar/read/: MeasureReaderTest.java
tuxguitar-mcp-chat/: pom.xml
