[workspace]
resolver = "2"
members = [
    "crates/tabmcp-model",
    "crates/tabmcp-theory",
    "crates/tabmcp-bridge",
    "crates/tabmcp-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dogematti/TuxGuitarMCP"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
getrandom = "0.3"
